# farsi-phonetic

./: _audio.py  finglish.py  pyproject.toml  requirements.txt
